welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:3: error: not found: value cpt
ecritMessage(cpt)
             ^